--- a/Nofino_Finance_Admin/client/src/css/style.css
+++ b/Nofino_Finance_Admin/client/src/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=fallback');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 @import 'tailwindcss';
 @import './additional-styles/utility-patterns.css' layer(components);
@@ -6,6 +7,8 @@
 @plugin "@tailwindcss/forms" {
   strategy: base;
 }
+
+
 
 @custom-variant dark (&:is(.dark *));
 @custom-variant sidebar-expanded (&:is(.sidebar-expanded *));
@@ -85,7 +88,7 @@
   --color-yellow-900: #4f3d0e;
   --color-yellow-950: #342809;
 
-  --font-inter: "Inter", "sans-serif";
+  --font-inter: "Poppins", "sans-serif";
 
   --text-xs: 0.75rem;
   --text-xs--line-height: 1.5;
